# matmul_hpc

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cpu/: CMakeLists.txt  _matmul.hpp  matmul.cpp  matmul.hpp  profile.cpp  search.cpp  test.cpp
cuda/: CMakeLists.txt  _matmul.cuh  profile.cu  test.cu
include/: matmul.h  matmul_core.h
mpi/: CMakeLists.txt  _matmul.hpp  _mpi_core.hpp  profile.cpp  sample.cpp  test.cpp
